Switch extreme rainfall panel to province summary

--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
           <div class="matrix" id="riskMatrix" role="table" aria-label="风险矩阵表格"></div>
         </article>
 
-        <article class="card card--wide" aria-label="极端降水风险地图">
+        <article class="card card--wide" aria-label="极端降水风险（省级）">
           <div class="card__head">
             <div>
-              <div class="card__title">极端降水风险地图（县级）</div>
-              <div class="card__subtitle">P95 极端降水概率 · ENSO/PDO/IOD 修正</div>
+              <div class="card__title">极端降水风险（省级）</div>
+              <div class="card__subtitle">P95 极端降水概率 · 省级汇总 · ENSO/PDO/IOD 修正</div>
             </div>
             <div class="risk-map__controls">
               <div class="field field--compact">
@@ -239,20 +239,9 @@
               <div class="pill pill--ghost" id="riskMapStatus">加载中</div>
             </div>
           </div>
-          <div class="risk-map">
-            <div class="risk-map__canvas">
-              <canvas id="riskMapCanvas" width="980" height="380"></canvas>
-              <div class="risk-map__legend">
-                <span class="legend__item"><span class="dot dot--low"></span>低</span>
-                <span class="legend__item"><span class="dot dot--mid"></span>中</span>
-                <span class="legend__item"><span class="dot dot--high"></span>高</span>
-                <span class="legend__item"><span class="dot dot--danger"></span>极高</span>
-              </div>
-            </div>
-            <div class="risk-map__side">
-              <div class="risk-map__note" id="riskMapNote">--</div>
-              <div class="risk-map__list" id="riskMapList"></div>
-            </div>
+          <div class="risk-province">
+            <div class="risk-province__note" id="riskProvNote">--</div>
+            <div class="risk-province__grid" id="riskProvGrid"></div>
           </div>
         </article>
 
