Update risk widget and climate insights

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="kpi__meta">事件：总产低于常年 10%</div>
           </div>
           <div class="risk-ring">
-            <canvas id="riskCanvas" width="260" height="110" aria-hidden="true"></canvas>
+            <div class="risk-battery" id="riskBattery" aria-hidden="true"></div>
           </div>
           <div class="hint" id="riskHint">--</div>
         </article>
@@ -158,13 +158,13 @@
           </div>
         </article>
 
-        <article class="card card--wide card--climate" aria-label="气象驱动解读">
+        <article class="card card--wide card--climate" aria-label="气象影响解读">
           <div class="card__head">
             <div>
-              <div class="card__title">气象驱动解读</div>
-              <div class="card__subtitle">突出“天气 → 产量”的影响链（示意）</div>
+              <div class="card__title">气象影响解读</div>
+              <div class="card__subtitle">聚焦天气对供给与风险窗口的传导（简报）</div>
             </div>
-            <div class="pill pill--info" id="climateTag">气象主导</div>
+            <div class="pill pill--info" id="climateTag">趋势简报</div>
           </div>
           <div class="climate">
             <div class="climate__left">
